# SparkLab

./: .gitignore  README.md  pyproject.toml  spark.yaml
Analyses/: BASE_fn_repo.py  BASE_gen_dataset.py  BASE_train_routine.py  VAE_train_module.py  demo_LDM.ipynb  demo_defineDataset.ipynb  demo_spark_diffusion.ipynb  demo_umap_latentSpaceVisualisation.ipynb
Analyses/Archive/: BASE_fn_repo.py  BASE_mockModels.py  BASE_train_routine.py  benchmrk_loop.py  demo_BASEstdAutoEncoder.ipynb
Analyses/Demo/: demo_DDPM.ipynb  demo_VAE.ipynb  demo_VAE_MNIST.ipynb  demo_stdAutoEncoder.ipynb
spark/: __init__.py  diffusion.py  processing.py
src/spark/: handle.py
stardust/: __init__.py  inspect.py  processing.py  show.py  types.py  util.py
