[project]
name = "spark"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.4.3",
    "matplotlib==3.10.8",
    "ipykernel==7.3.0",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "umap-learn==0.5.11",
]
